# notes-knowledge-qa

./: .gitignore  README.md  config.yaml  design.md  pyproject.toml
notes_qa/: __init__.py  agent_search.py  chunker.py  cli.py  config.py  embedder.py  history.py  keyword_index.py  loader.py  qa.py  retriever.py  vector_store.py  web.py
notes_qa/static/: index.html
tests/: test_chunker.py  test_embedder.py  test_history.py  test_keyword_index.py  test_loader.py  test_vector_store.py
